--- a/PrepCapstone_SLC_Air.ipynb
+++ b/PrepCapstone_SLC_Air.ipynb
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analytical Question #2: What sort of seasonal variation do we see?\n",
+    "### Analytical Question #2: Are there seasonal variation in the data?\n",
     "\n",
     "Let's take a look at how air quality varies throughout the year.  Is the AQI higher or lower in particular months?"
    ]
@@ -534,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analytical Question #3:  What long term trends do we see?\n",
+    "### Analytical Question #3:  What are the long term trends?\n",
     "\n",
     "What's going on in the big picture?  Is air quality increasing or decreasing?  To answer this, let's take a look at the average annual AQI.  \n",
     "\n",
