--- a/PrepCapstone_SLC_Air.ipynb
+++ b/PrepCapstone_SLC_Air.ipynb
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analytical Question #2: Are there seasonal variation in the data?\n",
+    "### Analytical Question #2: Are there seasonal variations in the data?\n",
     "\n",
     "Let's take a look at how air quality varies throughout the year.  Is the AQI higher or lower in particular months?"
    ]
