--- a/PrepCapstone_SLC_Air.ipynb
+++ b/PrepCapstone_SLC_Air.ipynb
@@ -491,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the plot above, we send seasonal trends emerge.  AQI tends to be the highest in Dec/Jan, and then increase again in summer months (June-July).  AQI values are the lowest in spring and fall months.  It's interesting that January shows the most variability in AQI values yet has no outliers.  \n",
+    "Based on the plot above, we see seasonal trends emerge.  AQI tends to be the highest in Dec/Jan, and then increase again in summer months (June-July).  AQI values are the lowest in spring and fall months.  It's interesting that January shows the most variability in AQI values yet has no outliers.  \n",
     "\n",
     "What about sources of pollution?  Is there any seasonal variation there?"
    ]
