--- a/PrepCapstone_SLC_Air.ipynb
+++ b/PrepCapstone_SLC_Air.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "The US EPA establishes acceptable concentration ranges for each pollutant type and assigns an overall AQI value and health classification based on the following scale:  \n",
     "\n",
-    "<img src=files/AQI.jpg align=\"center\" embed=True>\n",
+    "<img src=Thinkful-Data-Science-Prep/AQI.JPG align=\"center\" embed=True>\n",
     "*Image source: https://airnow.gov/index.cfm?action=aqibasics.aqi*\n",
     "\n",
     "The dataset comes from the US EPA (https://www.epa.gov/outdoor-air-quality-data) and is a csv file containing 5 columns: date, main source of pollution contributing to the AQI for a given day, monitoring location site name, monitoring location site ID, and daily AQI value. Only one monitoring location is listed for each day and it's unclear how the reported location is determined."
