--- a/PrepCapstone_SLC_Air.ipynb
+++ b/PrepCapstone_SLC_Air.ipynb
@@ -277,7 +277,7 @@
    "source": [
     "The high value corresponds to March 30, 2010.  A Google search of this date reveals unusually high winds lead to a severe dust storm in the region, leading to short-term hazardous air conditions. Interesting.  So it represents a real value.\n",
     "\n",
-    "What about sources of pollution?  Let's look at the breakdown of that data:"
+    "What about sources of pollution?  Let's look at the breakdown of that data."
    ]
   },
   {
